2004-04-06 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b12

	* Bugfix: Added missing ; in watermark_album

	* Change: UI Change from Sections to Tabs in Config Wizard.
		  Details in setup/functions.inc.

	* Change: Fixed wrong use of gallery_error().

	* Bugfix: $GLOBALS['user_prefix'] was not used when embedded in phpnuke or nsnnuke.

2004-04-05  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b11

	* Change: Variable checks to remove PHP5 warning messages in devMode.
	  No functional changes.

2004-04-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b10

	* Change: Add edit_watermark.php and watermark_album.php to 
	  $safe_to_include in index.php

2004-04-01  Jay Rossiter <cryptographite@users.sf.net> 1.4.4-cvs-b9

	* Change: Updated if(getAlbumName) to if(isAlbum) in view_album.php

	* Change: if(strlen()) -> if(!empty()) in watermark code

	* Typo: "Beginn" -> "Begin" in adminAlbumLayout.inc

	* Typo: Case fix in view_album.php for "Watermark Album"

2004-04-01  Jay Rossiter <cryptographite@users.sf.net> 1.4.4-cvs-b8

	* Change: Replace = with : in embedded_style.css for *all* skins

2004-03-31 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b7

        * Bugfix: Added missing quotes around a defined check.

	* Change: Replaced all error_format() with gallery_error().
		  Added echo to all former gallery_error();

	* Change: Little Changes for phpBB2. No major changes.

        * Change: Trivial add of Mambo to list of Environments in Config Wizard.

	* Change: removed unused center() function.

2004-03-31  Jay Rossiter <cryptographite@users.sf.net> 1.4.4-cvs-b6

	* Change:  Merge jenst's Mambo text fix forward from RC1.

2004-03-30  Jay Rossiter <cryptographite@users.sf.net> 1.4.4-cvs-b5

	* Fix: Check for validity of $rotate before referencing

2004-03-30  Christian Mohn <ch-moh@online.no> 1.4.4-cvs-b4

        * Fix: Removed max_file_size limit for form data in add_form.inc

2004-03-30  Don Willingham <donwillingham@users.sf.net> 1.4.4-cvs-b3
