@@ -148,6 +148,11 @@ TD, P
 	{
 	  font-size: 10px;
 	}
+
+.viewcounter {
+	  font-size: 10px;
+	}
+
 .popuphead
 	{
 	  font-size: 16px;
